--- a/postgres-secret.yml
+++ b/postgres-secret.yml
@@ -4,7 +4,7 @@ apiVersion: v1
 metadata:
   labels:
     app: etherpad_db
-  name: postgresql-secret
+  name: postgresql
 data:
   database-name: ZXRoZXJwYWQ=
   database-password: ZXRoZXI=
