--- a/AA-etherpad-set.yaml
+++ b/AA-etherpad-set.yaml
@@ -70,6 +70,8 @@ spec:
               value: ether
             - name: NODE_ENV
               value: production
+            - name: ADMIN_PASSWORD
+              value: secret
           ports:
             - containerPort: 9001
               protocol: TCP
