--- a/test/real-source.yaml
+++ b/test/real-source.yaml
@@ -843,7 +843,7 @@ spec:
               protocol: TCP
           volumeMounts:
             - name: postgresql-data
-              mountPath: /var/lib/pgsql/data
+              mountPath: /var/lib/pgsql/data/pgdata
       volumes:
         - name: postgresql-data
           persistentVolumeClaim:
